# 马士兵go/bigDJ/backend/customer/api/customer/customer.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
 // 	protoc-gen-go v1.36.11
-// 	protoc        v6.33.0
+// 	protoc        v6.33.1
 // source: api/customer/customer.proto
 
 package customer
@@ -22,6 +22,206 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
+type LoginReq struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Telephone     string                 `protobuf:"bytes,1,opt,name=telephone,proto3" json:"telephone,omitempty"`
+	VerifyCode    string                 `protobuf:"bytes,2,opt,name=verify_code,json=verifyCode,proto3" json:"verify_code,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *LoginReq) Reset() {
+	*x = LoginReq{}
+	mi := &file_api_customer_customer_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *LoginReq) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LoginReq) ProtoMessage() {}
+
+func (x *LoginReq) ProtoReflect() protoreflect.Message {
+	mi := &file_api_customer_customer_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LoginReq.ProtoReflect.Descriptor instead.
+func (*LoginReq) Descriptor() ([]byte, []int) {
+	return file_api_customer_customer_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *LoginReq) GetTelephone() string {
+	if x != nil {
+		return x.Telephone
+	}
+	return ""
+}
+
+func (x *LoginReq) GetVerifyCode() string {
+	if x != nil {
+		return x.VerifyCode
+	}
+	return ""
+}
+
+type LoginResp struct {
+	state          protoimpl.MessageState `protogen:"open.v1"`
+	Code           int64                  `protobuf:"varint,1,opt,name=code,proto3" json:"code,omitempty"`
+	Message        string                 `protobuf:"bytes,2,opt,name=message,proto3" json:"message,omitempty"`
+	Token          string                 `protobuf:"bytes,3,opt,name=token,proto3" json:"token,omitempty"`
+	TokenCreatedAt int64                  `protobuf:"varint,4,opt,name=token_created_at,json=tokenCreatedAt,proto3" json:"token_created_at,omitempty"`
+	TokenLife      int32                  `protobuf:"varint,5,opt,name=token_life,json=tokenLife,proto3" json:"token_life,omitempty"`
+	unknownFields  protoimpl.UnknownFields
+	sizeCache      protoimpl.SizeCache
+}
+
+func (x *LoginResp) Reset() {
+	*x = LoginResp{}
+	mi := &file_api_customer_customer_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *LoginResp) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LoginResp) ProtoMessage() {}
+
+func (x *LoginResp) ProtoReflect() protoreflect.Message {
+	mi := &file_api_customer_customer_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LoginResp.ProtoReflect.Descriptor instead.
+func (*LoginResp) Descriptor() ([]byte, []int) {
+	return file_api_customer_customer_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *LoginResp) GetCode() int64 {
+	if x != nil {
+		return x.Code
+	}
+	return 0
+}
+
+func (x *LoginResp) GetMessage() string {
+	if x != nil {
+		return x.Message
+	}
+	return ""
+}
+
+func (x *LoginResp) GetToken() string {
+	if x != nil {
+		return x.Token
+	}
+	return ""
+}
+
+func (x *LoginResp) GetTokenCreatedAt() int64 {
+	if x != nil {
+		return x.TokenCreatedAt
+	}
+	return 0
+}
+
+func (x *LoginResp) GetTokenLife() int32 {
+	if x != nil {
+		return x.TokenLife
+	}
+	return 0
+}
+
+type LogoutReq struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *LogoutReq) Reset() {
+	*x = LogoutReq{}
+	mi := &file_api_customer_customer_proto_msgTypes[2]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *LogoutReq) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LogoutReq) ProtoMessage() {}
+
+func (x *LogoutReq) ProtoReflect() protoreflect.Message {
+	mi := &file_api_customer_customer_proto_msgTypes[2]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LogoutReq.ProtoReflect.Descriptor instead.
+func (*LogoutReq) Descriptor() ([]byte, []int) {
+	return file_api_customer_customer_proto_rawDescGZIP(), []int{2}
+}
+
+type LogoutResp struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *LogoutResp) Reset() {
+	*x = LogoutResp{}
+	mi := &file_api_customer_customer_proto_msgTypes[3]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *LogoutResp) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LogoutResp) ProtoMessage() {}
+
+func (x *LogoutResp) ProtoReflect() protoreflect.Message {
+	mi := &file_api_customer_customer_proto_msgTypes[3]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LogoutResp.ProtoReflect.Descriptor instead.
+func (*LogoutResp) Descriptor() ([]byte, []int) {
+	return file_api_customer_customer_proto_rawDescGZIP(), []int{3}
+}
+
 type GetVerifyCodeReq struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
 	Telephone     string                 `protobuf:"bytes,1,opt,name=telephone,proto3" json:"telephone,omitempty"`
@@ -31,7 +231,7 @@ type GetVerifyCodeReq struct {
 
 func (x *GetVerifyCodeReq) Reset() {
 	*x = GetVerifyCodeReq{}
-	mi := &file_api_customer_customer_proto_msgTypes[0]
+	mi := &file_api_customer_customer_proto_msgTypes[4]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -43,7 +243,7 @@ func (x *GetVerifyCodeReq) String() string {
 func (*GetVerifyCodeReq) ProtoMessage() {}
 
 func (x *GetVerifyCodeReq) ProtoReflect() protoreflect.Message {
-	mi := &file_api_customer_customer_proto_msgTypes[0]
+	mi := &file_api_customer_customer_proto_msgTypes[4]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -56,7 +256,7 @@ func (x *GetVerifyCodeReq) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use GetVerifyCodeReq.ProtoReflect.Descriptor instead.
 func (*GetVerifyCodeReq) Descriptor() ([]byte, []int) {
-	return file_api_customer_customer_proto_rawDescGZIP(), []int{0}
+	return file_api_customer_customer_proto_rawDescGZIP(), []int{4}
 }
 
 func (x *GetVerifyCodeReq) GetTelephone() string {
@@ -79,7 +279,7 @@ type GetVerifyCodeResp struct {
 
 func (x *GetVerifyCodeResp) Reset() {
 	*x = GetVerifyCodeResp{}
-	mi := &file_api_customer_customer_proto_msgTypes[1]
+	mi := &file_api_customer_customer_proto_msgTypes[5]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -91,7 +291,7 @@ func (x *GetVerifyCodeResp) String() string {
 func (*GetVerifyCodeResp) ProtoMessage() {}
 
 func (x *GetVerifyCodeResp) ProtoReflect() protoreflect.Message {
-	mi := &file_api_customer_customer_proto_msgTypes[1]
+	mi := &file_api_customer_customer_proto_msgTypes[5]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -104,7 +304,7 @@ func (x *GetVerifyCodeResp) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use GetVerifyCodeResp.ProtoReflect.Descriptor instead.
 func (*GetVerifyCodeResp) Descriptor() ([]byte, []int) {
-	return file_api_customer_customer_proto_rawDescGZIP(), []int{1}
+	return file_api_customer_customer_proto_rawDescGZIP(), []int{5}
 }
 
 func (x *GetVerifyCodeResp) GetCode() int64 {
@@ -146,7 +346,21 @@ var File_api_customer_customer_proto protoreflect.FileDescriptor
 
 const file_api_customer_customer_proto_rawDesc = "" +
 	"\n" +
-	"\x1bapi/customer/customer.proto\x12\fapi.customer\x1a\x1cgoogle/api/annotations.proto\"0\n" +
+	"\x1bapi/customer/customer.proto\x12\fapi.customer\x1a\x1cgoogle/api/annotations.proto\"I\n" +
+	"\bLoginReq\x12\x1c\n" +
+	"\ttelephone\x18\x01 \x01(\tR\ttelephone\x12\x1f\n" +
+	"\vverify_code\x18\x02 \x01(\tR\n" +
+	"verifyCode\"\x98\x01\n" +
+	"\tLoginResp\x12\x12\n" +
+	"\x04code\x18\x01 \x01(\x03R\x04code\x12\x18\n" +
+	"\amessage\x18\x02 \x01(\tR\amessage\x12\x14\n" +
+	"\x05token\x18\x03 \x01(\tR\x05token\x12(\n" +
+	"\x10token_created_at\x18\x04 \x01(\x03R\x0etokenCreatedAt\x12\x1d\n" +
+	"\n" +
+	"token_life\x18\x05 \x01(\x05R\ttokenLife\"\v\n" +
+	"\tLogoutReq\"\f\n" +
+	"\n" +
+	"LogoutResp\"0\n" +
 	"\x10GetVerifyCodeReq\x12\x1c\n" +
 	"\ttelephone\x18\x01 \x01(\tR\ttelephone\"\xb6\x01\n" +
 	"\x11GetVerifyCodeResp\x12\x12\n" +
@@ -155,9 +369,11 @@ const file_api_customer_customer_proto_rawDesc = "" +
 	"\vverify_code\x18\x03 \x01(\tR\n" +
 	"verifyCode\x12(\n" +
 	"\x10verify_code_time\x18\x04 \x01(\x03R\x0everifyCodeTime\x12(\n" +
-	"\x10verify_code_life\x18\x05 \x01(\x05R\x0everifyCodeLife2\x8b\x01\n" +
+	"\x10verify_code_life\x18\x05 \x01(\x05R\x0everifyCodeLife2\xb8\x02\n" +
 	"\bCustomer\x12\x7f\n" +
-	"\rGetVerifyCode\x12\x1e.api.customer.GetVerifyCodeReq\x1a\x1f.api.customer.GetVerifyCodeResp\"-\x82\xd3\xe4\x93\x02'\x12%/customer/get-verify-code/{telephone}B Z\x1ecustomer/api/customer;customerb\x06proto3"
+	"\rGetVerifyCode\x12\x1e.api.customer.GetVerifyCodeReq\x1a\x1f.api.customer.GetVerifyCodeResp\"-\x82\xd3\xe4\x93\x02'\x12%/customer/get-verify-code/{telephone}\x12T\n" +
+	"\x05Login\x12\x16.api.customer.LoginReq\x1a\x17.api.customer.LoginResp\"\x1a\x82\xd3\xe4\x93\x02\x14:\x01*\"\x0f/customer/login\x12U\n" +
+	"\x06Logout\x12\x17.api.customer.LogoutReq\x1a\x18.api.customer.LogoutResp\"\x18\x82\xd3\xe4\x93\x02\x12\x12\x10/customer/logoutB Z\x1ecustomer/api/customer;customerb\x06proto3"
 
 var (
 	file_api_customer_customer_proto_rawDescOnce sync.Once
@@ -171,16 +387,24 @@ func file_api_customer_customer_proto_rawDescGZIP() []byte {
 	return file_api_customer_customer_proto_rawDescData
 }
 
-var file_api_customer_customer_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_customer_customer_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
 var file_api_customer_customer_proto_goTypes = []any{
-	(*GetVerifyCodeReq)(nil),  // 0: api.customer.GetVerifyCodeReq
-	(*GetVerifyCodeResp)(nil), // 1: api.customer.GetVerifyCodeResp
+	(*LoginReq)(nil),          // 0: api.customer.LoginReq
+	(*LoginResp)(nil),         // 1: api.customer.LoginResp
+	(*LogoutReq)(nil),         // 2: api.customer.LogoutReq
+	(*LogoutResp)(nil),        // 3: api.customer.LogoutResp
+	(*GetVerifyCodeReq)(nil),  // 4: api.customer.GetVerifyCodeReq
+	(*GetVerifyCodeResp)(nil), // 5: api.customer.GetVerifyCodeResp
 }
 var file_api_customer_customer_proto_depIdxs = []int32{
-	0, // 0: api.customer.Customer.GetVerifyCode:input_type -> api.customer.GetVerifyCodeReq
-	1, // 1: api.customer.Customer.GetVerifyCode:output_type -> api.customer.GetVerifyCodeResp
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
+	4, // 0: api.customer.Customer.GetVerifyCode:input_type -> api.customer.GetVerifyCodeReq
+	0, // 1: api.customer.Customer.Login:input_type -> api.customer.LoginReq
+	2, // 2: api.customer.Customer.Logout:input_type -> api.customer.LogoutReq
+	5, // 3: api.customer.Customer.GetVerifyCode:output_type -> api.customer.GetVerifyCodeResp
+	1, // 4: api.customer.Customer.Login:output_type -> api.customer.LoginResp
+	3, // 5: api.customer.Customer.Logout:output_type -> api.customer.LogoutResp
+	3, // [3:6] is the sub-list for method output_type
+	0, // [0:3] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -197,7 +421,7 @@ func file_api_customer_customer_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_customer_customer_proto_rawDesc), len(file_api_customer_customer_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   6,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
