# 马士兵go/bigDJ/backend/customer/internal/server/http.go
@@ -1,14 +1,19 @@
 package server
 
 import (
+	"context"
 	"customer/api/customer"
 	v1 "customer/api/helloworld/v1"
+	"customer/internal/biz"
 	"customer/internal/conf"
 	"customer/internal/service"
 
 	"github.com/go-kratos/kratos/v2/log"
+	"github.com/go-kratos/kratos/v2/middleware/auth/jwt"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
+	"github.com/go-kratos/kratos/v2/middleware/selector"
 	"github.com/go-kratos/kratos/v2/transport/http"
+	jwt2 "github.com/golang-jwt/jwt/v5"
 )
 
 // NewHTTPServer new an HTTP server.
@@ -16,6 +21,22 @@ func NewHTTPServer(c *conf.Server, cus *service.CustomerService, greeter *servic
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
+			// 自己设置的中间件
+			selector.Server(
+				jwt.Server(func(token *jwt2.Token) (interface{}, error) {
+					return []byte(biz.CustomerSecret), nil
+				}),
+			).Match(func(ctx context.Context, operation string) bool {
+				// 根据
+				noJWT := map[string]struct{}{
+					"/api.customer.Customer/GetVerifyCode": {},
+					"/api.customer.Customer/Login":         {},
+				}
+				if _, exists := noJWT[operation]; exists {
+					return false
+				}
+				return true
+			}).Build(),
 		),
 	}
 	if c.Http.Network != "" {
